// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Body component (SSR) > passes style and other props correctly 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">

<body style="background-color:red" data-testid="body-test">Test</body>"
`;

exports[`Body component (SSR) > renders children correctly 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">

<body>Test message</body>"
`;

exports[`Body component (SSR) > renders correctly 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">

<body>Lorem ipsum</body>"
`;
